tttod_frontend/styles/app.scss
@font-face {
    font-family: "Adventure";
    font-style: normal;
    font-weight: normal;
    src: url("../fonts/Adventure.ttf") format("truetype");
}

@font-face {
    font-family: "Piazzolla";
    font-style: normal;
    font-weight: normal;
    src: url("../fonts/Piazzolla-VariableFont_opsz,wght.ttf") format("truetype");
}

@font-face {
    font-family: "Piazzolla";
    font-style: italic;
    font-weight: normal;
    src: url("../fonts/Piazzolla-Italic-VariableFont_opsz,wght.ttf") format("truetype");
}

$primary: #fc0;
$navbar-background-color: $primary;
$button-background-color: $primary;

@import "~bulma/bulma.sass";

$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';

@import '~@fortawesome/fontawesome-free/scss/fontawesome';
@import '~@fortawesome/fontawesome-free/scss/solid';
@import '~@fortawesome/fontawesome-free/scss/regular';

.button.is-loading::after {
    border-color: transparent transparent $text-strong $text-strong !important;
}

* {
    user-select: none;
}

html {
    width: 100%;
    min-height: 100%;
    overflow-y: auto;
}

body {
    font-family: 'Piazzolla';
    background-image: url("../images/background.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    min-height: 100%;
    overflow-y: auto;
}

.logo {
    font-size: 22px;
    .fas {
        font-size: 2em;
        padding-right: 0.2em;
    }
}

.title, .subtitle, .modal-card-title {
    font-family: 'Adventure';
}
.subtitle {
    color: $primary;
}
button {
    font-family: 'Adventure';
    &>i.icon {
        height: auto !important;
    }
}
textarea {
    font-family: 'Piazzolla';
}

ul {
    list-style: disc inside;
}

ul.no-bullet {
    list-style: none;
}

ol {
    list-style-position: inside;
}

.explanation {
    text-decoration: underline dotted $text;
    text-decoration-skip-ink: none;
    cursor: help;
}

.tile.is-ancestor {
    background-color: adjust-color($scheme-main, $alpha: -0.2);
    border-radius: 5px;
    padding: 1em;
}

.navbar {
    font-family: 'Adventure';
    margin-bottom: 1em;
}

.user-ready {
    color: $info;
}

.user-not-ready {
    color: $danger;
}

.player-list, .dice-list {
    display: flex;
    &>* {
        margin: 0 0.1em;
    }
}
.dice-list {
    font-size: 22pt;
}

.button-with-player-list {
    display: flex;
    align-items: baseline;
    justify-content: flex-start;
    align-content: flex-start;
    flex-wrap: wrap;
    &>div {
        margin-left: 0.5em;
    }
}

tr .name {
    width: 100%;
}

.attribute-card {
    margin: 10px;
}

.character-name-input {
    display: flex;
    align-items: baseline;
    &>* {
        margin-right: 0.5em;
    }
    &>input {
        width: 40%;
    }
}

.control.reputation, .control.speciality {
    display: flex;
    align-items: baseline;
    &>* {
        margin-right: 0.5em;
    }
}

.create-artifact {
    display: flex;
    align-items: baseline;
    &>input {
        width: 30%;
        margin: 0 0.4em;
        &[name=artifact_origin] {
            margin-right: 0;
        }
    }
}

.stat-rating {
    margin-right: 0.3em;
}

.success-table {
    table-layout: fixed;
    width: 100%;

    td {
        white-space: nowrap;
        overflow: hidden;
    }

    td.success-table-label {
        text-align: right;
        width: 6.5em;
    }

    td.success-table-progress {
        max-width: 99%;
        margin: 0;
        padding: 0;
        vertical-align: middle;
        progress {
            display: inline-block;
        }
    }
    td.success-table-summary {
        width: 3em;
        text-align: right;
    }
}

.gm-icon {
    text-shadow: black 0 0 4px;
}

.success-image, .failure-image {
    background-position: center;
    background-size: cover;
    width: 100%;
    height: 0;
    margin-bottom: 1em;
}

.success-image {
    background-image: url("../images/escape.jpg");
    padding-top: 61.8%;
}

.failure-image {
    background-image: url("../images/explosion.jpg");
    padding-top: 62.8%;
}

